--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ main {
   align-items: center;
   box-shadow: 4px 4px 6px silver;
   padding: 50px 0;
-  border: 2px solid black;
+  border: 1px solid black;
 }
 
 #heading {
@@ -118,25 +118,81 @@ main {
   margin-bottom: 25px;
 }
 
-.btn {
-  margin-right: 7px;
+.btn_reset {
+  margin-left: 2px;
+  margin-right: 5px;
 }
 .buttons {
   display: block;
   margin-bottom: 40px;
 }
-.alert-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 50px;
 }
-#alert {
-  color: var(--secondary);
-  background-color: var(--primary);
-  padding: 5px;
-  border-radius: 5px;
-  display: none;
-  animation: 1s ease-out 0s 1 slideFromBottom;
+
+#snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 50px;
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 50px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 50px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    bottom: 50px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
 }
 
 #footer {
@@ -146,7 +202,62 @@ main {
   position: absolute;
   bottom: 0;
   left: 0;
+  background-color: var(--primary);
   right: 0;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+.modal-btn {
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* The Close Button */
+.close,
+.confirm {
+  color: var(--secondary);
+  background-color: var(--dark);
+  font-size: var(--font_sm);
+  font-weight: bold;
+  margin: 0 5px;
+  padding: 5px;
+  border: 1px solid transparent;
+}
+
+.close:hover,
+.close:focus,
+.confirm:hover,
+.confirm:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: var(--secondary);
+  border-color: var(--dark);
 }
 
 /* Keyframes */
@@ -165,5 +276,19 @@ main {
   }
   100% {
     transform: translateY(0);
+  }
+}
+
+/* Responsive */
+@media (max-width: 792px) {
+  .container {
+    width: 95%;
+  }
+  .main {
+    box-shadow: 0;
+    border: 0;
+  }
+  .modal-content {
+    width: 90%;
   }
 }
